--- a/webapp/baomat.html
+++ b/webapp/baomat.html
@@ -263,7 +263,7 @@
                     <div class="col-8 policy-content">
                     
                         <h2>Chính Sách Bảo Mật</h2>
-                        <p>Xin vui lòng đọc chính sách bảo mật một cách cẩn thận để có được một sự hiểu biết rõ ràng về cách thức thông tin thông tin cá nhân của bạn được thu thập, sử dụng, bảo vệ hoặc xử lý tại <strong > <a href="" style="color: orange;">giadungplus.com</a></strong></p>
+                        <p>Xin vui lòng đọc chính sách bảo mật một cách cẩn thận để có được một sự hiểu biết rõ ràng về cách thức thông tin thông tin cá nhân của bạn được thu thập, sử dụng, bảo vệ hoặc xử lý tại <strong > <a href="" style="color: orange;">bán đồ gia dụng</a></strong></p>
                         <h3>a) Mục đích thu thập thông tin cá nhân</h3>
                         <p>Giadungplus.com có thể sử dụng các thông tin thu thập từ bạn để thực hiện các cuộc khảo sát truyền thông hoặc marketing, hoặc phục vụ cho các mục đích sau:</p>
                         <ol style="margin-left:50px ;">
