--- a/webapp/dambao.html
+++ b/webapp/dambao.html
@@ -272,7 +272,7 @@
                             <li>Nhanh chóng, linh hoạt trong việc vận chuyển, thanh toán</li>
                             <li>Bảo hành và hỗ trợ chuyên nghiệp, tận tình</li>
                         </ol>
-                        <p>Chúng tôi có nói điều này trong bài <strong ><a href=""style="color: orange;">giới thiệu về Gia Dụng Plus.</a></strong></p>
+                        <p>Chúng tôi có nói điều này trong bài <strong ><a href=""style="color: orange;">giới thiệu về bán đồ gia dụng</a></strong></p>
                         <p><strong>Lòng tin của khách hàng, của bạn</strong> là sức mạnh đối với sự phát triển của Gia Dụng VDS. Do đó, chúng tôi xin hứa và cam kết những điều sau đây.</p>
                         <h3>CAM KẾT HOÀN TIỀN</h3>
                         <p>Gia Dụng Plus cam kết sẽ hoàn tiền 100%, đổi trả đối với các khách hàng nếu sản phẩm của chúng tôi. Tham khảo <a href="" style="color: orange;">chính sách đổi trả</a> của chúng tôi.</p>
@@ -287,7 +287,7 @@
                         <h3>CAM KẾT VỀ CHẤT LƯỢNG SẢN PHẨM</h3>
                         <p>Gia Dụng Plus luôn lựa chọn những nhà cung cấp và mặt hàng chất lượng để cung cấp cho khách hàng. Do đó, khách hàng có thể yên tâm về chất lượng sản phẩm khi chúng tôi đã đăng tài trên website của mình.</p>
                         <p>Chúng tôi đã kiểm tra, xem xét, sờ tận tay, thậm chí dùng thử trước khi bán các sản phẩm tới tay người tiêu dùng.</p>
-                         <p>Mong rằng những cam kết trên của Gia Dụng Plus, có thể khiến quý khách bớt lo lắng phần nào khi mua hàng online trên <strong><a href="" style="color: orange;">giadungplus.com</a></strong></p>
+                         <p>Mong rằng những cam kết trên của Gia Dụng Plus, có thể khiến quý khách bớt lo lắng phần nào khi mua hàng online trên <strong><a href="" style="color: orange;">bán đồ gia dụng</a></strong></p>
                          <p>Rất vui lòng khi được phục vụ quý khách.</p>
                     </div>
             </div>
