--- a/webapp/chinhsachdoitra.html
+++ b/webapp/chinhsachdoitra.html
@@ -268,7 +268,7 @@
                             </h3>
                             <p>Gia Dụng Plus cam kết bán hàng nguyên mới và đảm bảo đúng chất lượng của nhà sản xuất. Đồng
                                 thời, sản phẩm mà khách hàng nhận được phải nguyên vẹn và đúng với các thông tin mô tả trên
-                                website giadungplus.com.</p>
+                                website Bán đồ gia dụng.</p>
 
                             <h3>
                                 <strong>2. GIAO HÀNG</strong>
@@ -289,7 +289,7 @@
                                 Gia Dụng Plus cũng hứa sẽ khắc phục để dịch vụ của mình ngày càng tốt hơn</p>
                             <p>- Bước 1: Nếu quý khách có nhu cầu đổi trả hàng, vui lòng thông báo ngay cho bộ phận chăm sóc
                                 khách hàng của Gia Dụng Plus trong vòng 3 ngày kể từ thời điểm nhận hàng thông qua fanpage:
-                                fb.com/giadungplus hoặc liên hệ HOTLINE: 0383.067.490</p>
+                                fb.com/Bán đồ gia dụng hoặc liên hệ HOTLINE: 0383.067.490</p>
                             <p>Sau khi nhận được yêu cầu đổi / trả, bộ phận Hỗ trợ khách hàng sẽ phản hồi khách hàng trong
                                 vòng 24 giờ làm việc.</p>
                             <p>- Bước 2: Chính sách đổi trả:</p>
@@ -307,7 +307,7 @@
                                 trường hợp đổi do quý khách muốn đổi sản phẩm do không ưng ý nữa hoặc bất kỳ lý do thì quý
                                 khách sẽ chịu phí ship 2 đầu: ship tới - ship về.
                                 <br>
-                                Gia Dụng Plus không hỗ trợ phí ship và không khuyến khích trường hợp này.
+                                Bán đồ gia dụng không hỗ trợ phí ship và không khuyến khích trường hợp này.
                             </p>
                         </div>
             </div>
@@ -363,7 +363,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@giadungplus.com </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@Bán đồ gia dụng </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
