--- a/webapp/dambao.html
+++ b/webapp/dambao.html
@@ -272,7 +272,7 @@
                             <li>Nhanh chóng, linh hoạt trong việc vận chuyển, thanh toán</li>
                             <li>Bảo hành và hỗ trợ chuyên nghiệp, tận tình</li>
                         </ol>
-                        <p>Chúng tôi có nói điều này trong bài <strong ><a href=""style="color: orange;">giới thiệu về bán đồ gia dụng</a></strong></p>
+                        <p>Chúng tôi có nói điều này trong bài <strong ><a href=""style="color: orange;">giới thiệu về bán đồ gia dụng.</a></strong></p>
                         <p><strong>Lòng tin của khách hàng, của bạn</strong> là sức mạnh đối với sự phát triển của Gia Dụng VDS. Do đó, chúng tôi xin hứa và cam kết những điều sau đây.</p>
                         <h3>CAM KẾT HOÀN TIỀN</h3>
                         <p>Gia Dụng Plus cam kết sẽ hoàn tiền 100%, đổi trả đối với các khách hàng nếu sản phẩm của chúng tôi. Tham khảo <a href="" style="color: orange;">chính sách đổi trả</a> của chúng tôi.</p>
@@ -343,7 +343,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@giadungplus.com </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@Bán đồ gia dụng </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
