--- a/webapp/gioithieu.html
+++ b/webapp/gioithieu.html
@@ -212,27 +212,27 @@
    <div class="support-img">
         <div class="img">
             <div class="text">
-                <h3>Về bán đồ gia dụng</h3>
+                <h3>Về Gia Dụng Plus</h3>
                 <p style="font-weight: 700;">NHÀ ĐẸP CHƯA ĐỦ</p>
                 <p style="font-weight: 700;">CÒN CẦN TIỆN ÍCH!</p>
             </div>
             <div class="text1">
-                <p>bán đồ gia dụng là cửa hàng bán lẻ các sản phẩm gia dụng thông minh, tiện ích, sang trọng
+                <p>Gia Dụng Plus là cửa hàng bán lẻ các sản phẩm gia dụng thông minh, tiện ích, sang trọng
                     cho phòng bếp, phòng ngủ, phòng khách, phòng tắm.... Mang lại căn nhà gọn gàng, ngăn nắp, thông minh cho người Việt</p>
             </div>
            
 
         </div>  
         <div class="about-page1">
-            <h3>01. bán đồ gia dụng có chất lượng vượt trội</h3>
+            <h3>01. Gia dụng plus có chất lượng vượt trội</h3>
             <div class="about-page-mt">
                 <div class="about-mt">
                     <h5>Lựa Chọn Nhà Cung Cấp Nghiêm Ngặt</h5>
-                    <p style="width:80% ;margin-left: 50px;">bán đồ gia dụng chỉ phân phối các sản phẩm có uy tín và chất lượng trên thị trường. Các sản phẩm gia dụng sẽ được kiểm tra kĩ càng về chất lượng, mẫu mã trước khi công khai bán ra.</p>
+                    <p style="width:80% ;margin-left: 50px;">Gia Dụng Plus chỉ phân phối các sản phẩm có uy tín và chất lượng trên thị trường. Các sản phẩm gia dụng sẽ được kiểm tra kĩ càng về chất lượng, mẫu mã trước khi công khai bán ra.</p>
                 </div>
                 <div class="about-mt">
                     <h5>Lựa Chọn Nhà Cung Cấp Nghiêm Ngặt</h5>
-                    <p style="width:80% ;margin-left: 50px;">Gbán đồ gia dụng chỉ phân phối các sản phẩm có uy tín và chất lượng trên thị trường. Các sản phẩm gia dụng sẽ được kiểm tra kĩ càng về chất lượng, mẫu mã trước khi công khai bán ra.</p>
+                    <p style="width:80% ;margin-left: 50px;">Gia Dụng Plus chỉ phân phối các sản phẩm có uy tín và chất lượng trên thị trường. Các sản phẩm gia dụng sẽ được kiểm tra kĩ càng về chất lượng, mẫu mã trước khi công khai bán ra.</p>
                     
                 </div>
 
@@ -245,7 +245,7 @@
             </div>
             <h3>03. Vận chuyển nhanh chóng, đa dạng cách vận chuyển</h3>
             <div class="about-page-mt">
-                <p>Gbán đồ gia dụng có tích hợp với các bên vận chuyển của Việt Nam như giaohangtietkiem.vn, giaohangnhanh, Viettel Post... để nhanh chóng đưa các sản phẩm tới tay khách hàng sao cho thuận tiện nhất.</p>
+                <p>Gia Dụng Plus có tích hợp với các bên vận chuyển của Việt Nam như giaohangtietkiem.vn, giaohangnhanh, Viettel Post... để nhanh chóng đưa các sản phẩm tới tay khách hàng sao cho thuận tiện nhất.</p>
 
             </div>
             <h3>04. Linh hoạt trong việc thanh toán, giữ uy tín với khách hàng</h3>
@@ -333,7 +333,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@giadungplus.com </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@Bán đồ gia dụng </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
