--- a/webapp/huongdan.html
+++ b/webapp/huongdan.html
@@ -272,7 +272,7 @@
                         <p>Quý khách có thể <a href="" style="color: orange; text-decoration: none;">đăng nhập tại đây.</a></p>
                         <p>Vui lòng nhập đúng nhuwngc gì mà quý khách đã đăng kí ở trên</p>
                         <p>Ngoài tài khoản đăng ký, quý khách có thể sử dụng chức năng đăng nhập bằng Facebook hoặc tài khoản Google.</p>
-                        <p>Chúc quý khách đăng ký và đăng nhập thành công. Hãy mua sắm ngay trên bán đồ gia dụng ngay nhé.</p>
+                        <p>Chúc quý khách đăng ký và đăng nhập thành công. Hãy mua sắm ngay trên Bán đồ gia dụng ngay nhé.</p>
                     </div>
             </div>
         </div>
@@ -327,7 +327,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@bán đồ gia dụng </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@giadungplus.com </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
