--- a/webapp/tthotro.html
+++ b/webapp/tthotro.html
@@ -238,7 +238,7 @@
                     <li class="col-5 query-item"><a href=""> Nếu hàng không giống hình ảnh, mô tả sản phẩm thì sao?</a></li>
                 </ul>
                     <ul class="row query-list">
-                    <li class="col-5 query-item"><a href=""> Làm sao để đặt hàng trên bán đồ gia dụng?</a></li>
+                    <li class="col-5 query-item"><a href=""> Làm sao để đặt hàng trên giadungplus.com?</a></li>
                     <li class="col-5 query-item"><a href=""> Hướng dẫn tạo tài khoản và đăng ký</a></li>
                     <li class="col-5 query-item"><a href="">Liên hệ với Gia Dụng Plus như thế nào?</a></li>
                 </ul>
@@ -297,7 +297,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@bán đồ gia dụng </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD:  cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@giadungplus.com </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
