--- a/webapp/huongdanmuahang.html
+++ b/webapp/huongdanmuahang.html
@@ -263,9 +263,9 @@
                     <div class="col-8 policy-content">
                         <h2>Hướng Dẫn Mua Hàng</h2>
                         <p>Mua hàng trực tuyến đang là xu hướng ở trên thế giới cũng như ở Việt Nam. Nhưng việc mua hàng online có thể vẫn còn xa lạ với nhiều quý khách của Gia Dụng Plus. </p>
-                         <p>Chúng tôi xin hướng dẫn với những quý khách vẫn chưa quen với việc này trên <a href="" style="color: orange; text-decoration: none;">bán đồ gia dụng</a></p>
+                         <p>Chúng tôi xin hướng dẫn với những quý khách vẫn chưa quen với việc này trên <a href="" style="color: orange; text-decoration: none;">Bán đồ gia dụng</a></p>
                         <h3>1. Tìm Kiếm Sản Phẩm</h3>
-                        <p>Quý khách có thể tìm các món gia dụng tiện ích và thông minh trên bán đồ gia dụng theo ba cách:</p>
+                        <p>Quý khách có thể tìm các món gia dụng tiện ích và thông minh trên Bán đồ gia dụng theo ba cách:</p>
                         <p><strong style="color: orange;">Cách 1.</strong> Nhập tên hoặc một phần của tên sản phẩm vào sau đó nhấn nút Tìm kiếm.</p>
                         <p><strong style="color: orange;">Cách 2.</strong> Tìm sản phẩm trong ngành, danh mục sản phẩm.</p>
                         <p>Gồm 5 ngành hàng được phân theo chức năng và vị trí của sản phẩm gia dụng như sau:</p>
@@ -287,12 +287,12 @@
                          <li>Thêm sản phẩm vào giỏ hàng (Hoặc nhấn vào nút tư vấn qua Facebook để được tư vấn thêm và chốt đơn về sản phẩm).</li>
                         </ul>
                         <h3>3. Đặt Hàng Sản Phẩm Đã Chọn</h3>
-                        <p>Sau khi dạo quanh 1 vòng website bán đồ gia dụng và tổng hợp tất cả những sản phẩm mà quý khách muốn mua vào giỏ hàng.</p>
+                        <p>Sau khi dạo quanh 1 vòng website Bán đồ gia dụng và tổng hợp tất cả những sản phẩm mà quý khách muốn mua vào giỏ hàng.</p>
                         <p>Quý khách click vào nút <strong>Thanh Toán</strong> (Ở Biểu Tượng Giỏ Hàng Trên Cùng).</p>
                         <p>Chú ý kiểm tra đúng số lượng sản phẩm muốn mua nhé. Click vào THANH TOÁN</p>
                         <h3>4. Hoàn Tất Đơn Hàng</h3>
                         <p>Hãy hoàn thành các trường thông tin thật chính xác để chúng tôi có thể giao hàng cho bạn.</p>
-                        <p>Vậy là quý khách đã hoàn thành quá trình đặt đơn hàng online trên bán đồ gia dụng rồi ạ. Xin chào và mong được phục vụ quý khách. Hãy thực hành ngay nhé.</p>
+                        <p>Vậy là quý khách đã hoàn thành quá trình đặt đơn hàng online trên Bán đồ gia dụng rồi ạ. Xin chào và mong được phục vụ quý khách. Hãy thực hành ngay nhé.</p>
                     </div>
             </div>
         </div>
@@ -347,7 +347,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@gbán đồ gia dụng </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@Bán đồ gia dụng </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
