--- a/webapp/lienhe.html
+++ b/webapp/lienhe.html
@@ -302,7 +302,7 @@
                             <div class="contact-item">
                                 <i class="fa-solid fa-envelope" style="margin-left: 85px;"></i>
                                 <p style="margin-left: 55px ;">Gửi thư mail</p>
-                                <p style="margin-top: 50px;">Mail:info@bán đồ gia dụng</p>
+                                <p style="margin-top: 50px;">Mail:info@Bán đồ gia dụng</p>
                                 
                             </div>
                             <div class="contact-item">
@@ -370,7 +370,7 @@
                     </div>
                 </div>
                 <div class="footer__aside">
-                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2021.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@bán đồ gia dụng </p>
+                    <p style="font-size:12px;color:#333">© 2021. Công ty cổ phần TMDV <b>Gia Dụng Plus</b>. GPDKKD: 0109514772 do sở KH và ĐT TP.HN cấp ngày 09/01/2022.<br> Địa chỉ: 143 Đại Mỗ, P. Đại Mỗ, Q.Nam Từ Liêm, HN. <br>Điện thoại: 0979 856 374. Email: cskh@Bán đồ gia dụng </p>
                     <div class="footer__aside-item--social">			
                         <p class="footer__aside-title">Theo dõi những kênh xã hội của gia dụng plus</p>
                         <ul class="social-media__item-list">
